[tool.poetry]
name = "youtube-downloader"
version = "0.1.0"
description = ""
authors = ["yangrchen <yangrc.chen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pytube = "^15.0.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
